Handle NullPointerException and replaced Stream.collect(Collectors.toList())